# nanoagent-compliance-hub

./: .env.example  Dockerfile  README.md  SUBMISSION_WRITEUP.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
agents/: compliance_agent.py  manager_agent.py  risk_agent.py  security_agent.py
app/: config.py  database.py  main.py  models.py  repository.py  workflow.py
dashboard/: Readme.md  app.py
dashboard/static/: styles.css
dashboard/templates/: index.html
docs/: Readme.md  architecture.md  threat_model.md
mcp_server/: expense_policy_server.py
sample_expenses/: conference.json  low_value.json  pii_expense.json  prompt_injection.json
scripts/: generate_fake_expenses.py  reset_database.py  seed_demo_data.py
skills/: compliance_skill.py  reporting_skill.py  risk_skill.py
tests/: test_mcp_server.py  test_security.py  test_workflow.py
